infrastructure/configs/actual/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: svc-actual-headers
  namespace: actual-server
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
